Resource add form, article image alignment margin fixed and add button added in resource page

--- a/web/themes/custom/wid/scss/custom/resources/resources.scss
+++ b/web/themes/custom/wid/scss/custom/resources/resources.scss
@@ -48,7 +48,7 @@
     }
   }
 
-  > div {
+  >div {
     padding: 8px 8px 18px;
     border-radius: 8px;
     background: $white;
@@ -56,7 +56,8 @@
     box-shadow: 5px 10px 20px #00000005;
     transition: all 0.23s;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       box-shadow: 5px 10px 20px 0 rgba(0, 0, 0, 0.12);
       transition: all 0.23s;
     }
@@ -128,14 +129,15 @@
     background: $white;
     transition: all 0.23s ease-in-out;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       border-color: $primary-color;
       background: $primary-color;
       transition: all 0.23s ease-in-out;
       box-shadow: 2px 5px 15px #00000029;
 
       .resource-initiative-logo {
-        > div {
+        >div {
           background: $white;
         }
 
@@ -156,7 +158,7 @@
   flex-wrap: wrap;
   align-items: center;
 
-  > div {
+  >div {
     background: #F6F5F8;
     padding: 9px;
     border-radius: 4px;
@@ -217,7 +219,7 @@
   .single-card {
     width: 100%;
 
-    > div {
+    >div {
       background: #fff;
       border: 1px solid #E5E5E5;
       padding: 8px 8px 18px;
@@ -262,7 +264,8 @@
       min-height: 32px;
     }
 
-    .date, span {
+    .date,
+    span {
       font-size: 12px;
       color: #8E8E8E;
       padding: 0 12px;
@@ -284,7 +287,8 @@
       text-transform: uppercase;
       transition: all 0.23s;
 
-      &:hover, &:focus {
+      &:hover,
+      &:focus {
         background: $primary-color;
         color: #fff;
         transition: all 0.23s;
@@ -338,7 +342,7 @@
       width: 60%;
     }
 
-    > div {
+    >div {
       background: #fff;
       padding: 8px 8px 18px;
       border-radius: 8px;
@@ -367,7 +371,8 @@
       color: #8E8E8E;
     }
 
-    .media-oembed-content, video {
+    .media-oembed-content,
+    video {
       @media only screen and (min-width: 1200px) {
         height: 587px;
       }
@@ -385,7 +390,7 @@
       width: 40%;
     }
 
-    > div {
+    >div {
       background: #fff;
       padding: 8px 8px 18px;
       border-radius: 8px;
@@ -417,14 +422,16 @@
       color: #8E8E8E;
     }
 
-    .media-oembed-content, video {
+    .media-oembed-content,
+    video {
       @media only screen and (min-width: 1200px) {
         height: 153px;
       }
     }
   }
 
-  .media-oembed-content, video {
+  .media-oembed-content,
+  video {
     width: 100%;
     border-radius: 4px;
   }
@@ -491,5 +498,33 @@
   .carousel-card-button {
     background: $primary-color;
     color: $white;
+  }
+}
+
+.resource-add-button {
+  position: fixed;
+  bottom: 35px;
+  right: 35px;
+  z-index: 9;
+
+  i {
+    font-size: $font-size-title-sm;
+    color: $primary-color;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    box-shadow: 5px 10px 20px 0 rgba(0, 0, 0, 0.08);
+    transition: 0.3s;
+  }
+
+  &:hover {
+    i {
+      background-color: $primary-color;
+      color: #ffffff;
+    }
   }
 }
